--- a/style.css
+++ b/style.css
@@ -1,53 +1,70 @@
+/* Global styles */
+
 body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
+font-family: Arial, Helvetica, sans-serif;
+font-size: 16px;
+margin: 0;
+padding: 0;
+}
+
+a {
+text-decoration: none;
+color: #000;
+}
+
+ul {
+list-style: none;
+margin: 0;
+padding: 0;
 }
 
 header {
-  background-color: #2c3e50;
-  color: #fff;
-  padding: 20px;
-  text-align: center;
+background-color: #eee;
+padding: 10px;
 }
 
-h1 {
-  margin: 0;
-  font-size: 3rem;
-  text-transform: uppercase;
-  letter-spacing: 2px;
+nav {
+display: flex;
+justify-content: space-between;
+align-items: center;
+}
+
+nav ul {
+display: flex;
+align-items: center;
+}
+
+nav li {
+margin-left: 20px;
+}
+
+nav li:first-child {
+margin-left: 0;
 }
 
 main {
-  padding: 50px;
-  text-align: justify;
-  line-height: 1.5;
-  max-width: 800px;
-  margin: 0 auto;
+max-width: 800px;
+margin: 0 auto;
+padding: 50px;
 }
 
-h2 {
-  font-size: 2rem;
-  color: #2c3e50;
-  margin-bottom: 30px;
+/* About page styles */
+
+.about h1 {
+font-size: 32px;
+margin-bottom: 20px;
 }
 
-p {
-  margin-bottom: 20px;
+.about p {
+line-height: 1.5;
+margin-bottom: 20px;
 }
+
+/* Footer styles */
 
 footer {
-  background-color: #2c3e50;
-  color: #fff;
-  padding: 10px;
-  text-align: center;
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-}
-
-@media screen and (max-width: 600px) {
-  main {
-    padding: 20px;
-  }
+background-color: #ccc;
+padding: 10px;
+text-align: center;
+margin-top: 50px;
 }
