--- a/style.css
+++ b/style.css
@@ -1,4 +1,10 @@
 /* Global styles */
+header {
+	background-image: url('Grand Line.jpg');
+	background-size: cover;
+	background-position: center;
+	padding: 10px;
+}
 
 body {
 font-family: Arial, Helvetica, sans-serif;
