--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 header {
 	background-image: url('Grand Line.jpg');
 	background-size: cover;
-	background-position: center;
+	background-position: top;
 	padding: 10px;
 }
 
