--- a/style.css
+++ b/style.css
@@ -1,15 +1,29 @@
 /* body */
 body {
-  background-image: url("GrandLine.jpg");
+  margin: 0;
+  padding: 0;
+}
+
+/* header */
+header {
+  background-image: url("Grand Line.jpg");
   background-size: cover;
   background-position: center;
+  height: 100vh;
+}
+
+/* logo */
+.logo {
+  display: block;
+  margin: auto;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 /* main section */
 main {
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: #fff;
   padding: 20px;
-  border-radius: 10px;
   margin: 50px auto;
   max-width: 800px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
@@ -17,42 +31,4 @@ main {
 
 /* about section */
 .about {
-  font-size: 18px;
-  line-height: 1.5;
-  margin-bottom: 30px;
-}
-
-/* business model highlight */
-.about span.business-model {
-  color: #FFB347;
-  font-weight: bold;
-}
-
-/* innovative content highlight */
-.about span.innovative-content {
-  color: #6BB9F0;
-  font-weight: bold;
-}
-
-/* footer */
-footer {
-  background-color: #222;
-  color: #fff;
-  text-align: center;
-  padding: 10px;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-}
-
-/* footer link */
-footer a {
-  color: #fff;
-  text-decoration: none;
-}
-
-/* footer link hover */
-footer a:hover {
-  text-decoration: underline;
-}
+  font-size: 18
