--- a/style.css
+++ b/style.css
@@ -3,6 +3,15 @@ body {
   margin: 0;
   padding: 0;
 }
+
+/* logo */
+.logo {
+  display: block;
+  margin: auto;
+  max-width: 1000%;
+  max-height: 50%;
+}
+
 /* main section */
 main {
   background-color: rgba(255, 255, 255, 0.8);
